Change user id acquisition method
- Get id_token with liff sdk and send it to backend
- Backend, using successfully verified userId

--- a/front/locales/ja.json
+++ b/front/locales/ja.json
@@ -93,6 +93,7 @@
         "msg001": "通信に失敗しました",
         "msg002": "リロードして再試行してもエラーが解消しない場合は、<br>お手数ですが画面を閉じてからもう一度操作をやり直してください。",
         "msg003": "エラー内容",
-        "msg004": "リロードして再試行"
+        "msg004": "リロードして再試行",
+        "msg005": "セッションが切れました。再度最初から操作してください。"
     }
 }
